force-app/main/default/objects/PO_Line_Items__c/PO_Line_Items__c.object-meta.xml
<CustomObject>
    <label>PO Line Items</label>
    <nameField>
        <label>PO Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>