force-app/main/default/objects/PO_Line_Items__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the inventory item being ordered in this line item.</inlineHelpText>
    <label>Inventory Item</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>PO Line Items</relationshipLabel>
    <relationshipName>PO_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>