force-app/main/default/objects/PO_Line_Items__c/fields/Quantity_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Ordered__c</fullName>
    <inlineHelpText>Enter the quantity of the inventory item being ordered.</inlineHelpText>
    <label>Quantity Ordered</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>